--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="container">
+      <div class="head">
+        <h1>TODO</h1>
+        <img src="/images/icon-sun.svg" alt="">
+      </div>
+      <div class="toadd">
+        <input type="checkbox" disabled>  
+        <input type="text" name="add" id="addTodo" placeholder="Create a new todo..">
+      </div>
+      <div>
 
+      </div>
+    </div>
+  </main>
   Todo
 
   <!-- Add dynamic number --> items left
