--- a/index.html
+++ b/index.html
@@ -1,54 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  
+
   <title>Frontend Mentor | Todo app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
-<body>
+
+<body class="dark-theme">
+  <header>
+
+  </header>
   <main>
     <div class="container">
       <div class="head">
         <h1>TODO</h1>
-        <img src="/images/icon-sun.svg" alt="">
+        <button id="theme-changer-light">
+          <img src="/images/icon-sun.svg" alt="">
+        </button>
+        <button id="theme-changer-dark">
+          <img src="/images/icon-moon.svg" alt="">
+        </button>
+       
       </div>
-      <div class="toadd">
-        <input type="checkbox" disabled>  
-        <input type="text" name="add" id="addTodo" placeholder="Create a new todo..">
+
+      <div id="bg-color-theme-change" class="bg-color-dark">
+        <!-- <div class="checkbox-container">
+          <input type="checkbox" disabled>  
+        </div> -->
+        <input class="task-input b-d-none" type="text" name="add" id="addTodo" placeholder="Create a new todo...">
       </div>
       <div>
 
+
+      </div>
+
+
+      <div id="bg-color-theme-change" class="list-container bg-color-dark">
+        <div class="task-input border-bottom">
+          <input type="checkbox" id="0">
+          <label for="0">Your first to do</label>
+        </div>
+        <div class="task-input border-bottom">
+          <input type="checkbox" id="1">
+          <label for="1">Your second to do</label>
+        </div>
+        <!-- <ul class="list">
+          <li class="list--item">Your first to do</li>
+          <li class="list--item">Your second to do</li> -->
+        </ul>
       </div>
     </div>
+
+  
   </main>
-  Todo
 
-  <!-- Add dynamic number --> items left
-
-  All
-  Active 
-  Completed
-
-  Clear Completed
-
-  Drag and drop to reorder list
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Eduard & Dídac</a>.
+    </div>
+  </footer>
   <script src="js/app.js"></script>
 </body>
 </html>
