--- a/index.html
+++ b/index.html
@@ -1,84 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-
-  <title>Frontend Mentor | Todo app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+  <title>Frontend Mentor | To-do app</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-
-<body class="dark-theme">
-  <header>
-
-  </header>
+<body id="dark" class="body-dark-theme">
   <main>
-    <div class="container">
-      <div class="head">
-        <h1>TODO</h1>
-        <button id="theme-changer-light">
-          <img src="/images/icon-sun.svg" alt="">
-        </button>
-        <button id="theme-changer-dark">
-          <img src="/images/icon-moon.svg" alt="">
-        </button>
-       
+    <div class="banner-image banner-dark-theme">
+      <div class="flexbox header-flexbox">
+        <h1 class="title">Todo</h1>
+        <button id="to-light-theme"><img class="theme-img" src="images/icon-sun.svg" alt=""></button>
+        <button id="to-dark-theme" class="d-none"><img class="theme-img" src="images/icon-moon.svg" alt=""></button>
       </div>
-
-      <div id="bg-color-theme-change" class="bg-color-dark">
-        <!-- <div class="checkbox-container">
-          <input type="checkbox" disabled>  
-        </div> -->
-        <input class="task-input b-d-none" type="text" name="add" id="addTodo" placeholder="Create a new todo...">
-      </div>
-      <div>
-
-
-      </div>
-
-
-      <div id="bg-color-theme-change" class="list-container bg-color-dark">
-        <div class="task-input border-bottom">
-          <input type="checkbox" id="0">
-          <label for="0">Your first to do</label>
-        </div>
-        <div class="task-input border-bottom">
-          <input type="checkbox" id="1">
-          <label for="1">Your second to do</label>
-        </div>
-        <!-- <ul class="list">
-          <li class="list--item">Your first to do</li>
-          <li class="list--item">Your second to do</li> -->
-        </ul>
+      <div id="add-to-do" class="container container-dark-theme">
+        <input class="color-dark-theme-three" type="text" placeholder="Create a new To-Do...">
       </div>
     </div>
 
-  
+    <div class="list-container container-dark-theme">
+      <ul id="sortable" ondrop="drop(event)" ondragover="allowDrop(event)">
+        <li draggable="true" ondragstart="drag(event)" class="active-task color-dark-theme-one border-bottom-dark-theme">
+          <label class="checkbox-container">
+            <span class="pointer">Buy soy milk</span>
+            <input class="checkbox" type="checkbox">
+            <span class="checkmark border-button-dark-theme"></span>
+            <button class="f-right delete-task d-none"><img src="images/icon-cross.svg" alt=""></button>
+          </label>
+        </li>
+        <li draggable="true" ondragstart="drag(event)" class="active-task color-dark-theme-one border-bottom-dark-theme">
+          <label class="checkbox-container">
+            <span class="pointer">Drink more water</span>
+            <input class="checkbox" type="checkbox">
+            <span class="checkmark border-button-dark-theme"></span>
+            <button class="f-right delete-task d-none"><img src="images/icon-cross.svg" alt=""></button>
+          </label>
+        </li>
+        <li draggable="true" ondragstart="drag(event)" class="active-task color-dark-theme-one border-bottom-dark-theme">
+          <label class="checkbox-container">
+            <span class="pointer">Pick up kids from school</span>
+            <input class="checkbox" type="checkbox">
+            <span class="checkmark border-button-dark-theme"></span>
+            <button class="f-right delete-task d-none"><img src="images/icon-cross.svg" alt=""></button>
+          </label>
+        </li>
+        <li draggable="true" ondragstart="drag(event)" class="active-task color-dark-theme-one border-bottom-dark-theme">
+          <label class="checkbox-container">
+            <span class="pointer">Read for 1h</span>
+            <input class="checkbox" type="checkbox">
+            <span class="checkmark border-button-dark-theme"></span>
+            <button class="f-right delete-task d-none"><img src="images/icon-cross.svg" alt=""></button>
+          </label>
+        </li>
+      </ul>
+      <div class="flexbox controls-flexbox">
+        <button id="items-left" class="color-dark-theme-four"><span id="items-left">Number</span> items left</button>
+        <button id="clear-completed" class="color-dark-theme-four">Clear Completed</button>
+      </div>
+    </div>
+    <div class="container container-thinner flexbox controls-flexbox container-dark-theme">
+      <button id="all-to-do" class="control filter-active color-dark-theme-three" active>All</button>
+      <button id="active-to-do" class="control color-dark-theme-three">Active</button>
+      <button id="completed-to-do" class="control color-dark-theme-three">Completed</button>
+    </div>
+
+    <div class="container container-thinner">
+      <p class="info color-dark-theme-four">Drag and drop to reorder list</p>
+    </div>
   </main>
-
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Eduard & Dídac</a>.
-    </div>
+  <footer class="color-dark-theme-three">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.github.com/goatbass">Eduard</a> & <a href="https://www.github.com/didac3141592">Dídac</a>.
   </footer>
-  <script src="js/app.js"></script>
 </body>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    $( "#sortable" ).sortable();
+    $( "#sortable" ).disableSelection();
+  } );
+  </script>
+<script src="js/functions.js"></script>
+<script src="js/main.js"></script>
+<script src="js/drag-and-drop.js"></script>
 </html>
